--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <address>
         <ul>
           <li>
-            <a href="tel:+110001111111"></a>
+            <a href="tel:+110001111111">+110001111111</a>
           </li>
           <li>
-            <a href="mailto:info@devstudio.com"></a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
         </ul>
       </address>
