--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <address>
         <ul>
           <li>
-            <a href="tel:+110001111111">+110001111111</a>
+            <a href="tel:+110001111111">+11(000)111-11-11</a>
           </li>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -28,11 +28,10 @@
     </header>
 
     <main>
-      <h1>
-        Effective Solutions<br />
-        for Your Business
-      </h1>
-      <button>Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <section>
         <h2>Strategy</h2>
         <p>
