--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2></h2>
+        <h2 hidden>We</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -69,20 +69,20 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="/images/Mark.jpg" alt="Mark" width="264" height="260" />
+            <img src="./images/Mark.jpg" alt="Mark" width="264" height="260" />
 
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/Tom.jpg" alt="Tom" width="264" height="260" />
+            <img src="./images/Tom.jpg" alt="Tom" width="264" height="260" />
 
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="/images/Camila.jpg"
+              src="./images/Camila.jpg"
               alt="Camila"
               width="264"
               height="260"
@@ -92,7 +92,7 @@
           </li>
           <li>
             <img
-              src="/images/Daniel.jpg"
+              src="./images/Daniel.jpg"
               alt="Daniel"
               width="264"
               height="260"
