--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2 hidden>We</h2>
+        <h2>We</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -69,7 +69,7 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/Mark.jpg" alt="Mark" width="264" height="260" />
+            <img src="./images/img.jpg" alt="Mark" width="264" height="260" />
 
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
